--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@ html,
 
 html {
     font-size: 18px;
-    background-image: url("../../background_photo_desktop.jpg");
+    background: #E7CAFF;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
